--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ env:
     - TOXENV=pypy3
     - TOXENV=flake8
 install:
-  - travis_retry pip install tox
+    - travis_retry pip install -e .[testing]
 script:
-  - make test
+    - make test
