--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ env:
     - TOXENV=pypy3
     - TOXENV=flake8
 install:
-    - travis_retry pip install -e .[testing]
+    - travis_retry make install
 script:
     - make test
